# resume-lambda-hitcount

./: .env  .flake8  .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml  pytest.ini
resume-lambda-hitcount/: handler.py
tests/unit/: event_1.json  event_2.json  test_handler.py
